--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
   "name": "aw-picker",
   "version": "0.1.0",
-  "private": true,
+  "main": "src/index.js",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --mode production --name index src/index.js",
     "lint": "vue-cli-service lint"
   },
+  "author": {
+    "name": "B_Cornelius",
+    "email": "18223306087@163.com"
+  },
+  "keywords": [
+    "vue",
+    "awesome",
+    "picker"
+  ],
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10"
@@ -15,24 +25,13 @@
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
+    "@vue/eslint-config-airbnb": "^4.0.1",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "sass": "^1.22.10",
+    "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
   },
   "postcss": {
     "plugins": {
