--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "release": "npm run build && npm publish",
     "build": "vue-cli-service build --mode production --target lib --name aw-picker src/index.js",
     "lint": "vue-cli-service lint"
   },
@@ -31,11 +32,13 @@
     "vue": "^2.6.10"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^8.2.0",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
     "@vue/eslint-config-airbnb": "^4.0.1",
     "babel-eslint": "^10.0.1",
+    "cz-conventional-changelog": "^3.0.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.22.10",
@@ -51,5 +54,10 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
